--- a/support.html
+++ b/support.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Hi 你好呀</title>
+    <title>存在感的个人主页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="个人主页,homepage"/>
     <meta name="keywords" content="个人主页,homepage"/>
@@ -62,16 +62,16 @@
                             </div>
                             <!--左侧信息区域-->
                             <div class="col-xl-4 order-first">
-                                <div class="start_intro"><span class="RedTextColor">Hi，我是银河漫游</span>
-                                    <div class="glitch" data-text="KK">KK</div>
-                                    <h4><i class="fa fa-connectdevelop"></i>WEB开发工程师</h4>
-                                    <p>仰望的星空，绘制的像素，翻阅的文字<br>或许都是我们在这趟孤独的时间旅行中，发现的「银河」。</p>
+                                <div class="start_intro"><span class="RedTextColor">Hi，我是存在感</span>
+                                    <div class="glitch" data-text="KK">kurt-wang</div>
+                                    <h4><i class="fa fa-apple" aria-hidden="true"></i>iOS开发工程师</h4>
+                                    <p>量产猿，努力转型中<br>乐忠于用程序实现自己的想法</p>
                                     <div class="start_btn">
-                                        <a href="https://kisstime.top/archives/124/" title=""
+                                        <a href="" title=""
                                            class="theme_btn RedBgShadow mr-4">
-                                            <i class="fa fa-smile-o"></i>了解更多
+                                            <i class="fa fa-smile-o"></i>往下看
                                         </a>
-                                        <a href="https://kisstime.top/archives/119/" title="" class="theme_btn blank">
+                                        <a href="" title="" class="theme_btn blank">
                                             <i class="fa PurpleTextColor fa-hand-o-right"></i>工作联系
                                         </a>
                                     </div>
@@ -95,17 +95,15 @@
         <nav>
             <ul>
                 <li><a href="#about" class="RedTextColor" title=""><span>关于</span></a></li>
-                <li><a href="https://kisstime.top/" class="SkyBlueTextColor" title=""><span>博客</span></a></li>
-                <li><a href="https://github.com/GalaxySuze" class="PurpleTextColor" title=""><span>项目</span></a></li>
-                <li><a href="https://www.yuque.com/galaxyroam" class="PinkTextColor" title=""><span>语雀</span></a></li>
-                <li><a href="https://kisstime.top/archives/124/" class="YellowTextColor" title=""><span>自媒体</span></a>
-                </li>
-                <li><a href="https://kisstime.top/archives/119/" class="GrayTextColor" title=""><span>联系我</span></a>
+                <li><a href="#project" class="PurpleTextColor" title=""><span>项目</span></a></li>
+                <li><a href="https://www.jianshu.com/u/ea8bee301e6f" class="SkyBlueTextColor" title=""><span>博客</span></a></li>
+                <li><a href="#contact" class="GrayTextColor" title=""><span>联系我</span></a>
                 </li>
             </ul>
         </nav>
     </div>
 </header>
+
 <!--关于我-->
 <section id="about">
     <div class="block">
@@ -115,21 +113,17 @@
                     <div class="about_me_sec">
                         <div class="element_about_left"><img src="images/element_about_left.png" alt=""/></div>
                         <div class="element_about_right"><img src="images/element_about_right.png" alt=""/></div>
-                        <div class="heading"><span class="RedTextColor">银河漫游KK</span>
+                        <div class="heading"><span class="RedTextColor">存在感</span>
                             <h1>关于我</h1></div>
                         <p>
-                            Hi，小伙伴你好呀。为什么会起「银河漫游KK」这个名字，主要原因是来自个人很喜爱的一部电影，克里斯托弗 · 诺兰的《<i>星际穿越</i>》，正如这部电影中一句台词：
-                            <br><b>「 时间是唯一能穿越所有维度的存在，它可以在不同维度空间里变慢或者变快，但无法倒流。」</b>
+                            主职为 iOS 开发工程师，92年天秤座，base北京，2015年入行至今，毕业初期一头扎进移动互联网创业大军。<br>
+                            尤记得路演时的面对投资人质问的各种尴尬以及对产品商业化的肤浅认识，一地鸡毛后留下更多的是反思。<br>
+                            之后经历过 p2p 和教育行业，年到 30，重新回想当初入行 iOS 的美好愿望：<br>
+                            <b>「 做一个 app 从此财富自由(🐶)。」</b>
                         </p>
                         <p>
-                            这也是个人博客域名（<a style="color: #545454" href="https://kisstime.top" target="_blank">https://kisstime.top/</a>）的释义，
-                            只有时间对于每个人都是公平的，不快不慢，不多不少，我们可以选择
-                            <b>「 Kill time，or Kiss time」</b>
-                            而 <b>「银河」</b> 可以说是具象或抽象的，仰望的星空，绘制的像素，翻阅的文字，或许都会是我们在这趟禹禹而行的时间旅行中，发现的如璀璨「银河」般的惊喜。
-                        </p>
-                        <p>
-                            回归现实生活，目前KK主职为Web后端开发工程师，94年天秤座，base上海，2015年入行至今，业余生活的爱好是绘画以及Steam喜加一。
-                            向往的理想状态是 <b>「用技术去生存，用艺术去生活」</b> ----来自《死亡诗社》。
+                            目前并不局限于单一方向开发，自从创业公司解散，更多会自己一人负责 App、小程序 + 后端的所有工作，将自己的一个个想法实现。<br>
+                            也会和一些志同道合的朋友一起，满怀激情的做一件事，虽然最终没有达到我们的预期，但时间总会记住这一切。
                         </p>
                     </div>
                 </div>
@@ -137,6 +131,54 @@
         </div>
     </div>
 </section>
+
+<!--项目-->
+<section id="project">
+    <div class="block">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-10">
+                    <div class="about_me_sec">
+                        <div class="element_about_left"><img src="images/element_about_left.png" alt=""/></div>
+                        <div class="element_about_right"><img src="images/element_about_right.png" alt=""/></div>
+                        <div class="heading"><span class="RedTextColor">Project</span>
+                            <h1>项目</h1></div>
+                        <p>
+                            
+                        </p>
+                        <p>
+                            
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--联系我-->
+<section id="contact">
+    <div class="block">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-10">
+                    <div class="about_me_sec">
+                        <div class="element_about_left"><img src="images/element_about_left.png" alt=""/></div>
+                        <div class="element_about_right"><img src="images/element_about_right.png" alt=""/></div>
+                        <div class="heading"><span class="RedTextColor">Contact</span>
+                            <h1>联系我</h1></div>
+                        <p>
+                            QQ：931625530（请备注来源和意图）
+                            微信：kela931625530（请备注来源和意图）
+                            邮箱：931625530@qq.com
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <footer>
     <div class="block no_padding">
         <div class="container">
@@ -146,8 +188,8 @@
                         <div class="row">
                             <div class="col-xl-7">
                                 <div class="download_cv_bottom"><span></span>
-                                    <a href="https://www.qmjianli.com/cv/211214NB4UG71LAB" target="_blank" class="theme_btn md_btr GrayBgShadow" title="">
-                                        <i class="fa  fa-long-arrow-down"></i>简历下载
+                                    <a href="https://cn.linkedin.com/in/柯佳-王-8a0238165" target="_blank" class="theme_btn md_btr GrayBgShadow" title="">
+                                        <i class="fa  fa-long-arrow-down"></i>简历
                                     </a>
                                 </div>
                             </div>
