modify: contact label

--- a/support.html
+++ b/support.html
@@ -168,9 +168,9 @@
                         <div class="heading"><span class="RedTextColor">Contact</span>
                             <h1>联系我</h1></div>
                         <p>
-                            QQ：931625530（请备注来源和意图）
-                            微信：kela931625530（请备注来源和意图）
-                            邮箱：931625530@qq.com
+                            QQ：931625530（请备注来源和意图）<br>
+                            微信：kela931625530（请备注来源和意图）<br>
+                            邮箱：931625530@qq.com <br>
                         </p>
                     </div>
                 </div>
