modify: contact href link

--- a/support.html
+++ b/support.html
@@ -71,7 +71,7 @@
                                            class="theme_btn RedBgShadow mr-4">
                                             <i class="fa fa-smile-o"></i>往下看
                                         </a>
-                                        <a href="" title="" class="theme_btn blank">
+                                        <a href="#contact" title="" class="theme_btn blank">
                                             <i class="fa PurpleTextColor fa-hand-o-right"></i>工作联系
                                         </a>
                                     </div>
