modify：修改个人页面路径

--- a/support.html
+++ b/support.html
@@ -8,18 +8,18 @@
     <meta name="keywords" content="个人主页,homepage"/>
     <meta name="author" content="kisstime.top"/>
     <!-- Styles -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <link rel="stylesheet" href="css/fonts/css/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/responsive.css"/>
+    <link rel="stylesheet" type="text/css" href="mine/css/bootstrap.css"/>
+    <link rel="stylesheet" type="text/css" href="mine/css/style.css"/>
+    <link rel="stylesheet" href="mine/css/fonts/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="mine/css/responsive.css"/>
 </head>
 <body>
 <!--装饰元素图片-->
-<img src="images/element_parallax1.png" class="vx" alt="" data-enllax-ratio="0.3" data-enllax-type="foreground"/>
-<img src="images/element_parallax2.png" class="vx2" alt="" data-enllax-ratio="-1" data-enllax-type="foreground"/>
-<img src="images/element_animation.png" class="vx" alt="" data-enllax-ratio="0.8" data-enllax-type="foreground"/>
+<img src="mine/images/element_parallax1.png" class="vx" alt="" data-enllax-ratio="0.3" data-enllax-type="foreground"/>
+<img src="mine/images/element_parallax2.png" class="vx2" alt="" data-enllax-ratio="-1" data-enllax-type="foreground"/>
+<img src="mine/images/element_animation.png" class="vx" alt="" data-enllax-ratio="0.8" data-enllax-type="foreground"/>
 <div class="page-loading">
-    <img src="images/loader.gif" alt=""/>
+    <img src="mine/images/loader.gif" alt=""/>
     <span>Skip Loader</span>
 </div>
 <!--首屏区域-->
@@ -34,30 +34,30 @@
                             <div class="col-xl-5 text-center order-last">
                                 <div class="user_img">
                                     <div class="element">
-                                        <img src="images/element_square.png" alt=""/>
+                                        <img src="mine/images/element_square.png" alt=""/>
                                     </div>
                                     <div class="element_circle_yellow">
-                                        <img src="images/element_yellow_circle.png" alt=""/>
+                                        <img src="mine/images/element_yellow_circle.png" alt=""/>
                                     </div>
                                     <div class="element_circle_pink">
-                                        <img src="images/element_pink_circle.png" alt=""/>
+                                        <img src="mine/images/element_pink_circle.png" alt=""/>
                                     </div>
                                     <div class="element_circle_small_pink">
-                                        <img src="images/element_pink_circle_small.png" alt=""/>
+                                        <img src="mine/images/element_pink_circle_small.png" alt=""/>
                                     </div>
                                     <div class="element_square">
-                                        <img src="images/element_square_yes.png" alt=""/>
+                                        <img src="mine/images/element_square_yes.png" alt=""/>
                                     </div>
                                     <div class="element_circle_purple">
-                                        <img src="images/element_purple_circle.png" alt=""/>
+                                        <img src="mine/images/element_purple_circle.png" alt=""/>
                                     </div>
                                     <div class="element_line">
-                                        <img src="images/line.png" alt=""/>
+                                        <img src="mine/images/line.png" alt=""/>
                                     </div>
                                     <div class="element_circle_gray">
-                                        <img src="images/element_gray_circle.png" alt=""/>
+                                        <img src="mine/images/element_gray_circle.png" alt=""/>
                                     </div>
-                                    <img src="images/resource/me.jpg" alt=""/>
+                                    <img src="mine/images/resource/me.jpg" alt=""/>
                                 </div>
                             </div>
                             <!--左侧信息区域-->
@@ -111,8 +111,8 @@
             <div class="row justify-content-center">
                 <div class="col-xl-10">
                     <div class="about_me_sec">
-                        <div class="element_about_left"><img src="images/element_about_left.png" alt=""/></div>
-                        <div class="element_about_right"><img src="images/element_about_right.png" alt=""/></div>
+                        <div class="element_about_left"><img src="mine/images/element_about_left.png" alt=""/></div>
+                        <div class="element_about_right"><img src="mine/images/element_about_right.png" alt=""/></div>
                         <div class="heading"><span class="RedTextColor">存在感</span>
                             <h1>关于我</h1></div>
                         <p>
@@ -139,8 +139,8 @@
             <div class="row justify-content-center">
                 <div class="col-xl-10">
                     <div class="about_me_sec">
-                        <div class="element_about_left"><img src="images/element_about_left.png" alt=""/></div>
-                        <div class="element_about_right"><img src="images/element_about_right.png" alt=""/></div>
+                        <div class="element_about_left"><img src="mine/images/element_about_left.png" alt=""/></div>
+                        <div class="element_about_right"><img src="mine/images/element_about_right.png" alt=""/></div>
                         <div class="heading"><span class="RedTextColor">Project</span>
                             <h1>项目</h1></div>
                         <p>
@@ -163,8 +163,8 @@
             <div class="row justify-content-center">
                 <div class="col-xl-10">
                     <div class="about_me_sec">
-                        <div class="element_about_left"><img src="images/element_about_left.png" alt=""/></div>
-                        <div class="element_about_right"><img src="images/element_about_right.png" alt=""/></div>
+                        <div class="element_about_left"><img src="mine/images/element_about_left.png" alt=""/></div>
+                        <div class="element_about_right"><img src="mine/images/element_about_right.png" alt=""/></div>
                         <div class="heading"><span class="RedTextColor">Contact</span>
                             <h1>联系我</h1></div>
                         <p>
@@ -203,16 +203,16 @@
         </div>
     </div>
 </footer>
-<script src="js/jquery.min.js"></script>
-<script src="js/modernizr.js"></script>
-<script src="js/script.js"></script>
-<script src="js/slick.min.js"></script>
-<script src="js/bootstrap.bundle.js"></script>
-<script src="js/isotop.js"></script>
-<script src="js/poptrox.js"></script>
-<script src="js/jquery.jigowatt.js"></script>
-<script src="js/enllax.js"></script>
-<script src="js/jquery.scroller.js"></script>
-<script src="js/jQuery_nav.js"></script>
+<script src="mine/js/jquery.min.js"></script>
+<script src="mine/js/modernizr.js"></script>
+<script src="mine/js/script.js"></script>
+<script src="mine/js/slick.min.js"></script>
+<script src="mine/js/bootstrap.bundle.js"></script>
+<script src="mine/js/isotop.js"></script>
+<script src="mine/js/poptrox.js"></script>
+<script src="mine/js/jquery.jigowatt.js"></script>
+<script src="mine/js/enllax.js"></script>
+<script src="mine/js/jquery.scroller.js"></script>
+<script src="mine/js/jQuery_nav.js"></script>
 </body>
 </html>
