add: 添加文件管理器的 preview 的图片

--- a/support.html
+++ b/support.html
@@ -145,11 +145,20 @@
                             <h1>项目</h1></div>
                         <p>
                             <h4>文件管理器 App</h4>
-                             “文件管理器”将手机作为服务器，允许其他同wifi下的终端能够通过浏览器管理操作手机上的文件，可以通过浏览器进行文件的拷贝、移动、下载、压缩、分享与上传以及文件夹分组功能。
+
+                            <p>
+                            	“文件管理器”将手机作为服务器，允许其他同wifi下的终端能够通过浏览器管理操作手机上的文件，可以通过浏览器进行文件的拷贝、移动、下载、压缩、分享与上传以及文件夹分组功能。
+                            </p>
+                            <div class="justify-content-center" style="margin-top: 15px">
+                             	<img src="images/preview-1.png" style="width:100%;" />
+                             	<img src="images/preview-2.png" style="width:100%; margin-top: 15px;"/>
+                         	</div>
                         </p>
                         <p>
                             <h4>多款 iMessage 贴纸应用</h4>
-                            基于 StickerPackExtension 实现的 iMessage 贴纸应用，长期位于 iMessage App Store 付费榜前十。
+                            <p>
+                            	基于 StickerPackExtension 实现的 iMessage 贴纸应用，长期位于 iMessage App Store 付费榜前十。
+                            </p>
                         </p>
                         
                     </div>
