--- a/support.html
+++ b/support.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>存在感的个人主页</title>
+    <title>王柯佳的个人主页</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="个人主页,homepage"/>
     <meta name="keywords" content="个人主页,homepage"/>
@@ -63,7 +63,7 @@
                             <!--左侧信息区域-->
                             <div class="col-xl-4 order-first">
                                 <div class="start_intro"><span class="RedTextColor">Hi，我是存在感</span>
-                                    <div class="glitch" data-text="KK">kurt-wang</div>
+                                    <div class="glitch" data-text="Kurt-Wang">王柯佳</div>
                                     <h4><i class="fa fa-apple" aria-hidden="true"></i>iOS开发工程师</h4>
                                     <p>量产猿，努力转型中<br>乐忠于用程序实现自己的想法</p>
                                     <div class="start_btn">
