modify: 修改 preview 图片 1 的格式

--- a/support.html
+++ b/support.html
@@ -150,7 +150,7 @@
                             	“文件管理器”将手机作为服务器，允许其他同wifi下的终端能够通过浏览器管理操作手机上的文件，可以通过浏览器进行文件的拷贝、移动、下载、压缩、分享与上传以及文件夹分组功能。
                             </p>
                             <div class="justify-content-center" style="margin-top: 15px">
-                             	<img src="images/preview-1.png" style="width:100%;" />
+                             	<img src="images/preview-1.jpg" style="width:100%;" />
                              	<img src="images/preview-2.png" style="width:100%; margin-top: 15px;"/>
                          	</div>
                         </p>
